--- a/sources/scss/_software.scss
+++ b/sources/scss/_software.scss
@@ -22,7 +22,7 @@
 		padding: 30px 15px;
 
 		@media (min-width: 1310px) {
-			margin-left: 225px;
+			margin-left: 175px;
 		}
 
 		@media (min-width: 1200px) {
@@ -72,5 +72,10 @@
 				display: block;
 			}
 		}
+	}
+
+	&__item {
+		background-color: #ffffff;
+		box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, .2);
 	}
 }
