am contact page

--- a/sources/scss/_variables.scss
+++ b/sources/scss/_variables.scss
@@ -49,7 +49,7 @@ $h-padding: 20px 0 0; // headline padding bottom
 
 
 // Colors
-$brand-primary: #EC0127;
+$brand-primary: #ec0127;
 $brand-secondary: #D8D9D9;
 $brand-secondary-lite: #F0F0F0;
 
