--- a/sources/scss/_news.scss
+++ b/sources/scss/_news.scss
@@ -40,7 +40,7 @@
     }
   }
   &__pop-up {
-    visibility: hidden;
+    //visibility: hidden;
     width: 100%;
     background: #fff;
     position: absolute;
