--- a/sources/scss/_software.scss
+++ b/sources/scss/_software.scss
@@ -4,6 +4,51 @@
 	position: relative;
 	background-color: $brand-secondary-lite;
 
+	&_revers {
+		background-color: $brand-secondary;
+
+		.tg-panel-solution__jp {
+
+			@media (min-width: 992px) {
+				order: 1;
+			}
+
+			&-img {
+
+				@media (min-width: 1200px) {
+					position: absolute;
+					right: 13px;
+					bottom: 15px;
+					max-width: 273px;
+				}
+			}
+
+			&-layout {
+				margin-right: auto;
+				margin-left: 0;
+				width: 343px;
+				height: 462px;
+				background-color: $brand-primary;
+				display: none;
+
+				@media (min-width: 1200px) {
+					display: block;
+				}
+			}
+		}
+
+		.tg-panel-solution__text {
+			@media (min-width: 992px) {
+				order: 2;
+			}
+
+			@media (min-width: 1310px) {
+				margin-left: 0;
+				margin-right: 175px;
+			}
+		}
+	}
+
 	&__top {
 		width: 100%;
 		max-width: 1366px;
@@ -53,7 +98,9 @@
 			}
 
 			img {
-				width: 100%;
+				margin-left: auto;
+				margin-right: auto;
+				display: block;
 
 				@media (max-width: 1199px) {
 					border-bottom: 25px solid $brand-primary;
@@ -77,5 +124,23 @@
 	&__item {
 		background-color: #ffffff;
 		box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, .2);
+		height: 100%;
+
+		img {
+			max-width: 200px;
+		}
+
+		&-text {
+			font-weight: 300;
+			font-size: rem(16);
+
+			@media (min-width: 768px) {
+				font-size: rem(18);
+			}
+
+			p {
+				margin-bottom: 0;
+			}
+		}
 	}
 }
