--- a/sources/scss/_general.scss
+++ b/sources/scss/_general.scss
@@ -68,3 +68,103 @@
 	}
 }
 
+.tg-template-art {
+	position: relative;
+
+	&_reverse {
+		.tg-template-art__title {
+
+			@media (min-width: 992px) {
+				margin-left: auto;
+			}
+		}
+
+		.tg-template-art__image {
+			@media (min-width: 992px) {
+				right: auto;
+				left: 0;
+
+				&:before {
+					width: 310px;
+					background-image: url(../img/mask-8.png);
+					left: -117px;
+				}
+			}
+
+			&-layer {
+				-webkit-clip-path: polygon(0 0px, 100% 0px, 60% 100%, 0 100%);
+				clip-path: polygon(0 0px, 100% 0px, 60% 100%, 0 100%);
+			}
+		}
+
+	}
+
+	&__top {
+		position: relative;
+		background-color: $brand-primary;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-image: url(../img/mask-6.png);
+		padding: 40px 0;
+
+		@media (min-width: 992px) {
+			min-height: 480px;
+			padding: 0;
+		}
+
+		.container,
+		.row {
+			min-height: inherit;
+		}
+	}
+
+	&__title {
+		color: #ffffff;
+		text-align: center;
+
+		@media (min-width: 992px) {
+			max-width: 600px;
+		}
+
+	}
+
+	&__image {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		width: 600px;
+		z-index: 1;
+		display: none;
+		overflow: hidden;
+
+		@media (min-width: 992px) {
+			display: block;
+		}
+
+		&:before {
+			content: '';
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			width: 478px;
+			background-position: center center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-image: url(../img/mask-7.png);
+			z-index: 7;
+		}
+
+		&-layer {
+			width: 100%;
+			height: 100%;
+			background-position: center center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			-webkit-clip-path: polygon(7% 0, 100% 0, 100% 100%, 47% 100%);
+			clip-path: polygon(7% 0, 100% 0, 100% 100%, 47% 100%);
+		}
+	}
+}
