--- a/sources/scss/_contact.scss
+++ b/sources/scss/_contact.scss
@@ -1,14 +1,16 @@
 .tg-contact {
   &__form-container {
     width: 100%;
-    height: 521px;
     border: 1px solid #707070;
+
     @media (max-width: 992px) {
       padding: 0 15px;
     }
+
     &__form {
       border: 1px solid red;
       min-height: 365px;
+
       @media (min-width: 992px) {
         margin: 0 30px;
       }
@@ -17,26 +19,180 @@
       }
     }
   }
+
+	&__form {
+		padding: 0 45px;
+		font-size: rem(16);
+
+		&-details {
+			flex: 0 0 100%;
+			max-width: 100%;
+			padding: 0 30px;
+		}
+
+		.wpcf7-form {
+			display: flex;
+			flex-wrap: wrap;
+			position: relative;
+			align-items: flex-start;
+			margin-left: -20px;
+			margin-right: -20px;
+
+			.ajax-loader {
+				position: absolute;
+				top: 5px;
+				right: 5px;
+			}
+
+			.wpcf7-not-valid-tip {
+				display: none;
+			}
+
+			.wpcf7-validation-errors {
+				font-size: rem(13);
+				margin: 0 15px !important;
+				padding: 5px !important;
+				color: #fff;
+				border: 0 solid transparent !important;
+				background-color: #FF0000;
+				position: absolute;
+				max-width: 300px;
+				border-radius: 3px;
+				z-index: 1000;
+				top: calc(100% + 10px);
+				right: 20px;
+
+
+				&:before {
+					content: '';
+					position: absolute;
+					top: -10px;
+					right: 15px;
+					width: 0;
+					height: 0;
+					border-left: 5px solid transparent;
+					border-right: 5px solid transparent;
+					border-bottom: 10px solid #FF0000;
+				}
+			}
+
+			.wpcf7-mail-sent-ok {
+				font-size: rem(13);
+				margin: 0 15px !important;
+				padding: 5px !important;
+				color: #fff;
+				border: 0 solid transparent !important;
+				background-color: #33CC33;
+				position: absolute;
+				max-width: 300px;
+				border-radius: 3px;
+				z-index: 1000;
+				top: calc(100% + 10px);
+				right: 20px;
+
+				&:before {
+					content: '';
+					position: absolute;
+					top: -10px;
+					right: 15px;
+					width: 0;
+					height: 0;
+					border-left: 5px solid transparent;
+					border-right: 5px solid transparent;
+					border-bottom: 10px solid #33CC33;
+				}
+			}
+
+			&-control-wrap {
+				flex: 0 0 50%;
+				max-width: 50%;
+				padding-left: 20px;
+				padding-right: 20px;
+
+				&.your-textarea {
+					flex: 0 0 100%;
+					max-width: 100%;
+				}
+			}
+
+			[type="text"],
+			[type="email"],
+			[type="tel"] {
+				line-height: 42px;
+				width: 100%;
+				height: 42px;
+				color: #1a1818;
+				padding: 0 10px;
+				border: none;
+				border-bottom: 2px solid #1a1818;
+				margin-bottom: 30px;
+				font-size: rem(16);
+
+				@include placeholder(#1A1818);
+
+				&.wpcf7-not-valid {
+					border-color: $brand-primary;
+				}
+			}
+
+			textarea {
+				width: 100%;
+				height: 126px;
+				border: 2px solid #1a1818;
+
+				&.wpcf7-not-valid {
+					border-color: $brand-primary;
+				}
+			}
+
+			[type="submit"] {
+				min-width: 146px;
+				line-height: 46px;
+				border-radius: 23px;
+				padding: 0 20px;
+				text-align: center;
+				font-size: rem(16);
+				font-weight: bold;
+				display: inline-block;
+				background-color: $brand-primary;
+				color: #fff;
+				margin-left: auto;
+				margin-right: auto;
+				margin-top: 40px;
+				border: none;
+
+				&:hover {
+					color: #fff;
+				}
+			}
+		}
+	}
+
   &__locations-container {
     background-color: #d8d9d9;
     background-image: url('../img/location/data_lines_2.png');
     background-repeat: no-repeat;
     background-position: bottom left;
   }
+
   &__locations {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    @media screen and (max-width: 767px) {
+
+    @media (max-width: 767px) {
       justify-content: center;
     }
+
     &__city {
       width: 31%;
       min-width: 331px;
-      @media screen and (max-width: 425px) {
+
+      @media (max-width: 425px) {
         max-width: 312px;
         min-width: 280px;
       }
+
       .name {
         background: #EC0127;
         position: absolute;
@@ -45,11 +201,13 @@
         line-height: 1.25;
         z-index: 1;
       }
+
       .card-container {
         display: flex;
         min-height: 350px;
         border: 1px solid #707070;
         background: #fff;
+
         .image {
           height: 185px;
           width: 100%;
@@ -59,17 +217,16 @@
           align-items: center;
           background-size: auto;
           background-position: center;
-          .fpo {
-            position: absolute;
-            width: 100%;
-            text-align: center;
-            color: #FF00D8;
-            -webkit-text-stroke-width: 1px;
-            -webkit-text-stroke-color: #fff;
-          }
         }
+
         .info {
-          height: 185px;
+          min-height: 185px;
+					padding: 20px;
+
+					a {
+						color: #000000;
+					}
+
           li {
             list-style: none;
             font-size: 20px;
