--- a/sources/scss/_about-us.scss
+++ b/sources/scss/_about-us.scss
@@ -22,27 +22,85 @@
 	}
 
 	&__story {
-		.tg-info-block-one__text {
-			width: 100%;
-			max-width: 100%;
+		overflow: hidden;
+
+		.container {
+			position: relative;
+			z-index: 99;
 		}
 
-		.tg-info-block-one__jp-img {
-			position: absolute;
-			width: 558px;
-			max-width: 558px;
-			right: -45px;
-			@media (max-width: 1200px) {
+		&-container {
+			position: relative;
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+
+			&:before,
+			&:after {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				bottom: 0;
+				display: none;
+
+				@media (min-width: 992px) {
+					display: block;
+				}
+			}
+
+			&:before {
+				width: 30px;
+				background-color: $brand-primary;
+				z-index: 1;
+			}
+
+			&:after {
+				width: 284px;
+				z-index: 2;
+				background-repeat: no-repeat;
+				background-position: center center;
+				background-size: cover;
+				background-image: url(../img/mask-10.png);
+			}
+
+			@media (min-width: 768px) {
+				min-height: 417px;
+			}
+
+			.tg-info-block-one {
 				position: relative;
-				width: 100%;
-				max-width: 100%;
-				right: 0;
+				z-index: 99;
+			}
+
+			.tg-info-block-one__text {
+				padding-top: 0;
+
+				@media (max-width: 1199px) {
+					padding: 0 15px;
+				}
 			}
 		}
 
-		.tg-info-block-one__jp-layout {
-			height: 417px;
-			background-image: url('../img/mask-6.png');
+		&-img {
+			z-index: 1;
+			margin-left: auto;
+			margin-right: auto;
+			max-width: 320px;
+
+			@media (min-width: 768px) {
+				position: absolute;
+				top: 50%;
+				transform: translateY(-50%);
+				right: -184px;
+				margin: 0;
+				max-width: none;
+			}
+		}
+
+		.tg-info-block-one__text {
+			width: 100%;
+			max-width: 100%;
 		}
 	}
 
