--- a/sources/scss/_general.scss
+++ b/sources/scss/_general.scss
@@ -1,5 +1,15 @@
 @import "variables";
 
+body {
+	@media (min-width: 992px) {
+		padding-top: 150px;
+	}
+}
+
+.tg-body-hidden {
+	overflow: hidden;
+}
+
 // Title
 .tg-title {
 	font-size: rem(26);
@@ -8,6 +18,7 @@
 	padding-left: 26px;
 	position: relative;
 	padding-bottom: 16px;
+	text-transform: uppercase;
 
 	@media (min-width: 768px) {
 		font-size: rem(30);
