--- a/sources/scss/_home-page.scss
+++ b/sources/scss/_home-page.scss
@@ -1,21 +1,85 @@
 @import "variables";
 
-.tg-tie-block {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	text-align: center;
-	color: #ffffff;
+.tg-header-slider {
+	position: relative;
 
-	@media (min-width: 768px) {
-		min-height: 665px;
+	&__item {
+		padding: 50px 0;
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: cover;
+		text-align: center;
+		color: #ffffff;
+		min-height: 440px;
+
+		@media (min-width: 768px) {
+			min-height: 665px;
+		}
+
+		&_v3 {
+			@media (min-width: 992px) {
+				align-items: flex-end;
+			}
+		}
+
+		p {
+			margin-bottom: 0;
+		}
+
+		&-section {
+			max-width: 302px;
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 
-	p {
-		margin-bottom: 0;
+	.tg-swiper-pagination {
+		position: absolute;
+		top: 20px;
+		right: 20%;
+		bottom: auto;
+		left: auto;
+		width: auto;
+		display: flex;
+		//flex-wrap: wrap;
+		z-index: 999;
+
+		@media (max-width: 991px) {
+			top: auto;
+			bottom: 20px;
+			left: 50%;
+			right: auto;
+			transform: translateX(-50%);
+		}
+
+		.swiper-pagination-bullet {
+			display: block;
+			width: 36px;
+			height: 7px;
+			background-color: $brand-secondary-lite;
+			margin: 0 8px;
+			border-radius: 0;
+			opacity: 1;
+
+			@media (min-width: 992px) {
+				width: 40px;
+			}
+
+			&:first-child {
+				margin-left: 0;
+			}
+
+			&:last-child {
+				margin-right: 0;
+			}
+
+			&-active {
+				background-color: #858688;
+			}
+		}
 	}
 }
 
@@ -105,28 +169,46 @@
 	background-color: $brand-secondary;
 
 	&__item {
-		width: 100%;
-		height: 100%;
-		min-height: 170px;
-		margin-left: auto;
-		margin-right: auto;
+		margin-left: -15px;
+		margin-right: -15px;
 		padding: 7px 9px;
 		background-color: #ffffff;
 		box-shadow: 3px 3px 6px 0 rgba(0, 0, 0, 0.1);
 
 		@media (min-width: 576px) {
 			max-width: 203px;
+			min-height: 170px;
+			width: 100%;
+			height: 100%;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		@media (max-width: 575px) {
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+			padding: 7px 30px;
 		}
 
 		&-icon {
 			width: 76px;
 			height: 76px;
-			margin-left: auto;
-			margin-right: auto;
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: cover;
 			margin-bottom: 10px;
+
+			@media (min-width: 576px) {
+				margin-left: auto;
+				margin-right: auto;
+			}
+
+			@media (max-width: 575px) {
+				flex: 0 0 76px;
+				max-width: 76px;
+				margin-bottom: 0;
+			}
 		}
 
 		&-title {
@@ -135,6 +217,12 @@
 			font-size: rem(18);
 			line-height: 1.2;
 			text-transform: uppercase;
+
+			@media (max-width: 575px) {
+				flex: 0 0 205px;
+				max-width: 205px;
+				margin: 0 auto;
+			}
 		}
 	}
 }
