--- a/sources/scss/_variables.scss
+++ b/sources/scss/_variables.scss
@@ -29,7 +29,7 @@ $line-height-array: (18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,52,54,56
 
 
 // Custom Spacers
-$custom-spacers: (-10, 0, 5, 10, 15, 20, 25, 30, 35, 40, 50, 60, 70, 80, 90, 100);
+$custom-spacers: (-10, 0, 5, 10, 15, 20, 25, 30, 35, 40, 50, 60, 70, 80, 90, 100, 200);
 
 
 // Base typography style
